--- a/teadawgs-minions-project/src/app/globals.css
+++ b/teadawgs-minions-project/src/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-roboto: 'Roboto', sans-serif;
+  --font-lilita: 'Lilita One', cursive;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-roboto: var(--font-roboto);
+  --font-lilita: var(--font-lilita);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: white;
-    --foreground: #ededed;
+    --foreground: white;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, cursive;
 }
